fixed z-index in AboutSchool.scss

--- a/frontend/src/Components/Pages/AboutSchool/AboutSchool.scss
+++ b/frontend/src/Components/Pages/AboutSchool/AboutSchool.scss
@@ -265,6 +265,7 @@ $laptop-st: 1.3;
   }
 
   &__card--1 {
+    z-index: 10;
     @include phone-style {
       margin-bottom: 56px !important;
     }
@@ -371,8 +372,7 @@ $laptop-st: 1.3;
   }
 
   &__card--2 {
-    z-index: -1;
-
+    z-index: 9;
     @include phone-style {
       margin-bottom: 40px !important;
     }
@@ -409,13 +409,13 @@ $laptop-st: 1.3;
         width: calc(48px * $tablet-st);
         height: calc(43px * $tablet-st);
         left: calc(95px * $tablet-st);
-        bottom: calc(-30px * $tablet-st);
+        bottom: calc(-39px * $tablet-st);
       }
 
       @include laptop-style {
         width: calc(48px / $laptop-st);
         height: calc(43px / $laptop-st);
-        right: calc(-32px / $laptop-st);
+        right: calc(-30px / $laptop-st);
         bottom: calc(53px / $laptop-st);
       }
     }
@@ -738,7 +738,7 @@ $laptop-st: 1.3;
         }
 
         @include tablet-style {
-          transform: rotate(calc(4deg * $tablet-st));
+          transform: rotate(6deg);
         }
 
       } @else {
@@ -749,7 +749,7 @@ $laptop-st: 1.3;
         }
 
         @include tablet-style {
-          transform: rotate(calc(4deg * $tablet-st));
+          transform: rotate(-6deg);
         }
       }
   
@@ -1227,6 +1227,7 @@ $laptop-st: 1.3;
     justify-content: end;
     border-radius: 32px;
     overflow: hidden;
+    z-index: 10;
   
     @include phone-style {
       width: 343px;
@@ -1235,8 +1236,8 @@ $laptop-st: 1.3;
     }
   
     @include tablet-style {
-      width:  calc(343px * $tablet-st); 
-      height:  calc(132px * $tablet-st); 
+      width: calc(343px * $tablet-st); 
+      height: calc(132px * $tablet-st); 
     }
   
     @include laptop-style {
